ecmascript/parser/tests/test262-error-references/fail/8dc484a35dd0dc16.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/8dc484a35dd0dc16.js:1:17
  |
1 | 'use strict'; ('\123')
  |                 ^^

